@@ -404,10 +404,10 @@ It means that we support the two most recent stable release series.
 
 We also provide the layers for legacy custom runtime as known as "provided".
 These layers are only for backward compatibility.
-We recommend to migrate to Amazon Linux 2.
+We recommend to migrate to Amazon Linux 2023.
 These layers are NO LONGER MAINTAINED and WILL NOT RECEIVE ANY UPDATES.
 
-The list of all layer ARNs is availeble on L<AWS::Lambda::AL>.
+The list of all layer ARNs is available on L<AWS::Lambda::AL>.
 
 =head2 Pre-built Zip Archives for Amazon Linux
 
@@ -421,9 +421,9 @@ C<https://shogo82148-lambda-perl-runtime-$REGION.s3.amazonaws.com/perl-$VERSION-
 
 =head1 LEGACY CUSTOM RUNTIME ON AMAZON LINUX 2
 
-Previously, we provided the layers that named without CPU architectures.
-These layers are compatible with x86_64 and only for backward compatibility.
-We recommend to specify the CPU architecture.
+We also provide the layers for legacy custom runtime as known as "provided.al2".
+These layers are only for backward compatibility.
+We recommend to migrate to Amazon Linux 2023.
 These layers are NO LONGER MAINTAINED and WILL NOT RECEIVE ANY UPDATES.
 
 =head2 Pre-built Legacy Public Lambda Layers for Amazon Linux 2
