@@ -3,6 +3,7 @@ Revision history for Perl extension aws-lambda
 {{$NEXT}}
     - Support tenant id in AWS::Lambda::Context #203
     - Add support for AWS_LAMBDA_MAX_CONCURRENCY #204
+    - Drop support for Amazon Linux 2 based layers #206
 
 0.6.0 2025-09-10T02:50:47Z
     - Perl 5.42.0 is released #194
